--- a/index.html
+++ b/index.html
@@ -120,9 +120,12 @@
     <script src="https://cdn.jsdelivr.net/gh/mawenshui/live2d-widget@latest/autoload.js"></script>
 
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+
     <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script type="text/javascript"> eval(function (p, a, c, k, e, d) {
+
+    <script type="text/javascript">
+        eval(function (p, a, c, k, e, d) {
             e = function (c) {
                 return (c < a ? "" : e(parseInt(c / a))) + ((c = c % a) > 35 ? String.fromCharCode(c + 29) : c.toString(36))
             };
@@ -147,10 +150,12 @@
             text-align: center;
             margin-left: auto;
             margin-right: auto;
-            /* background-image: url(https://link.jscdn.cn/1drv/aHR0cHM6Ly8xZHJ2Lm1zL3UvcyFBc0lMWU9pZXhyVUFqRU5CTUNkanB0UnZhZlFY.jpg); */
+
             /* 固定图片背景 */
-            background-image: url(https://api.vvhan.com/api/acgimg);
+            /* background-image: url(https://link.jscdn.cn/1drv/aHR0cHM6Ly8xZHJ2Lm1zL3UvcyFBc0lMWU9pZXhyVUFqRU5CTUNkanB0UnZhZlFY.jpg); */
             /* 随机二次元图片接口 */
+            background-image: url(https://api.vvhan.com/api/acgimg);
+
             background-repeat: no-repeat;
             background-size: 100% 100%;
             background-attachment: fixed;
@@ -160,8 +165,7 @@
             background-color: black;
         }
 
-        span
-        {
+        span {
             background: linear-gradient(to right, red, blue);
             -webkit-background-clip: text;
             color: transparent;
@@ -172,7 +176,7 @@
 
 <body>
     <!-- 为网站添加满屏雪花下雪特效（接口版），添加到你网站的body标签内即可 -->
-    <script src='https://api.vvhan.com/api/snow'></script>
+    <!-- <script src='https://api.vvhan.com/api/snow'></script> -->
 
     <div style="padding-top:0px;">
         <div class="alert alert-info" style="background: transparent;border: 0px;">
@@ -198,8 +202,8 @@
 
             <div class="panel panel-default" style="filter: alpha(opacity=80); opacity:0.8;">
                 <div id="kj" class="panel-body">
-                    <iframe src="" id="player" width="100%" height="600px" allowtransparency="true" frameborder="5"
-                        scrolling="no"> </iframe>
+                    <iframe src="" id="player" width="100%" height="600px" allow="fullscreen"
+                        frameborder="5" scrolling="no"> </iframe>
                 </div>
             </div>
 
