--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="panel panel-default" style="filter: alpha(opacity=80); opacity:0.8;">
                 <div id="kj" class="panel-body">
                     <iframe src="" id="player" width="100%" height="600px" allow="fullscreen"
-                        frameborder="5" scrolling="no"> </iframe>
+                        scrolling="no" autoPlay="true"> </iframe>
                 </div>
             </div>
 
